gcc/testsuite/rust/rustc/ui/parser/deli-ident-issue-2_dg.rs
fn main() {
    if 1 < 2 {
        let _a = vec!]; // { dg-error "" "" { target *-*-* } }
    }
} // { dg-error "" "" { target *-*-* } }

fn main() {}

